RESOLVED FIXED282559
RELEASE_ASSERT(checkedPtrCountWithoutThreadCheck()) is failing for Windows Release builds
https://bugs.webkit.org/show_bug.cgi?id=282559
Summary RELEASE_ASSERT(checkedPtrCountWithoutThreadCheck()) is failing for Windows Re...
Fujii Hironori
Reported 2024-11-04 13:26:30 PST
RELEASE_ASSERT(checkedPtrCountWithoutThreadCheck()) is failing for Windows Release builds Windows Release builds are crasing after 286084@main due to a release assertion failure. Regressions: Unexpected crashes (20) webgl/2.0.0/conformance/textures/canvas_sub_rectangle/tex-2d-rgb-rgb-unsigned_short_5_6_5.html [ Crash ] webgl/2.0.0/conformance/textures/canvas_sub_rectangle/tex-2d-rgba-rgba-unsigned_byte.html [ Crash ] webgl/2.0.0/conformance/textures/canvas_sub_rectangle/tex-2d-rgba-rgba-unsigned_short_4_4_4_4.html [ Crash ] webgl/2.0.0/conformance/textures/canvas_sub_rectangle/tex-2d-rgba-rgba-unsigned_short_5_5_5_1.html [ Crash ] webgl/2.0.y/conformance/context/context-release-with-workers.html [ Crash ] webgl/2.0.y/conformance/offscreencanvas/context-attribute-preserve-drawing-buffer.html [ Crash ] webgl/2.0.y/conformance/offscreencanvas/context-creation-worker.html [ Crash ] webgl/2.0.y/conformance/offscreencanvas/context-lost-restored-worker.html [ Crash ] webgl/2.0.y/conformance/offscreencanvas/context-lost-worker.html [ Crash ] webgl/2.0.y/conformance/offscreencanvas/methods-worker.html [ Crash ] webgl/2.0.y/conformance/offscreencanvas/offscreencanvas-resize.html [ Crash ] webgl/2.0.y/conformance/offscreencanvas/offscreencanvas-transfer-image-bitmap.html [ Crash ] webgl/2.0.y/conformance/rendering/canvas-alpha-bug.html [ Crash ] webgl/2.0.y/conformance2/offscreencanvas/context-creation-worker.html [ Crash ] webgl/2.0.y/conformance2/offscreencanvas/methods-2-worker.html [ Crash ] webgl/2.0.y/conformance2/offscreencanvas/offscreencanvas-query.html [ Crash ] webgl/2.0.y/conformance2/offscreencanvas/offscreencanvas-sync.html [ Crash ] webgl/2.0.y/conformance2/offscreencanvas/offscreencanvas-timer-query.html [ Crash ] webgl/2.0.y/conformance2/offscreencanvas/offscreencanvas-transfer-image-bitmap.html [ Crash ] webgl/pending/conformance/glsl/misc/shader-with-reserved-words-2.html [ Crash ] # Child-SP RetAddr Call Site 00 000000e5`fc7ff438 00007ffe`1bb8a68d JavaScriptCore!WTFCrash(void)+0x5 [C:\BW\Windows-64-bit-Release-Build\build\Source\WTF\wtf\Assertions.cpp @ 365] 01 000000e5`fc7ff440 00007ffe`1ccae87a WebCore!WTFCrashWithInfo(void)+0x1d [C:\BW\Windows-64-bit-Release-Build\build\WebKitBuild\Release\WTF\Headers\wtf\Assertions.h @ 912] 02 (Inline Function) --------`-------- WebCore!WTF::CanMakeCheckedPtrBase<WTF::SingleThreadIntegralWrapper<unsigned int>,unsigned int,0>::decrementCheckedPtrCount+0x30 [C:\BW\Windows-64-bit-Release-Build\build\WebKitBuild\Release\WTF\Headers\wtf\CheckedRef.h @ 288] 03 (Inline Function) --------`-------- WebCore!WebCore::ScriptRunner::decrementCheckedPtrCount+0x30 [C:\BW\Windows-64-bit-Release-Build\build\Source\WebCore\dom\ScriptRunner.h @ 56] 04 (Inline Function) --------`-------- WebCore!WTF::CheckedRef<WebCore::ScriptRunner,WTF::RawPtrTraits<WebCore::ScriptRunner> >::~CheckedRef+0x30 [C:\BW\Windows-64-bit-Release-Build\build\WebKitBuild\Release\WTF\Headers\wtf\CheckedRef.h @ 52] 05 (Inline Function) --------`-------- WebCore!WebCore::Timer::Timer<WebCore::ScriptRunner,WebCore::ScriptRunner>::<lambda_1>::operator()+0x42 [C:\BW\Windows-64-bit-Release-Build\build\Source\WebCore\platform\Timer.h @ 174] 06 000000e5`fc7ff480 00007ffe`1d35c32e WebCore!WTF::Detail::CallableWrapper<`lambda at C:\BW\Windows-64-bit-Release-Build\build\Source\WebCore\platform\Timer.h:171:22',void>::call(void)+0x4a [C:\BW\Windows-64-bit-Release-Build\build\WebKitBuild\Release\WTF\Headers\wtf\Function.h @ 53] 07 000000e5`fc7ff4b0 00007ffe`1bbff4e3 WebCore!WebCore::ThreadTimers::sharedTimerFiredInternal(void)+0xde [C:\BW\Windows-64-bit-Release-Build\build\Source\WebCore\platform\ThreadTimers.cpp @ 131] 08 000000e5`fc7ff550 00007ffe`198bfe79 WebCore!WebCore::TimerWindowWndProc(struct HWND__ * hWnd = <Value unavailable error>, unsigned int message = <Value unavailable error>, unsigned int64 wParam = <Value unavailable error>, int64 lParam = <Value unavailable error>)+0x63 [C:\BW\Windows-64-bit-Release-Build\build\Source\WebCore\platform\win\MainThreadSharedTimerWin.cpp @ 89] 09 000000e5`fc7ff580 00007ffe`198bf7f2 USER32!CallWindowProcW+0x419 0a 000000e5`fc7ff710 00007ffe`05ce003f USER32!DispatchMessageW+0x1e2 0b 000000e5`fc7ff790 00007ffe`20d8669f JavaScriptCore!WTF::RunLoop::run(void)+0x5f [C:\BW\Windows-64-bit-Release-Build\build\Source\WTF\wtf\win\RunLoopWin.cpp @ 88] 0c (Inline Function) --------`-------- WebKit2!WebKit::AuxiliaryProcessMainBase<WebKit::WebProcess,1>::run+0x39 [C:\BW\Windows-64-bit-Release-Build\build\Source\WebKit\Shared\AuxiliaryProcessMain.h @ 72] 0d (Inline Function) --------`-------- WebKit2!WebKit::AuxiliaryProcessMain+0x72 [C:\BW\Windows-64-bit-Release-Build\build\Source\WebKit\Shared\AuxiliaryProcessMain.h @ 98] 0e 000000e5`fc7ff810 00007ff7`9100100a WebKit2!WebKit::WebProcessMain(int argc = 0n8, char ** argv = <Value unavailable error>)+0x9f [C:\BW\Windows-64-bit-Release-Build\build\Source\WebKit\WebProcess\win\WebProcessMainWin.cpp @ 44] 0f 000000e5`fc7ff8a0 00007ff7`910013bc WebKitWebProcess!main(int argc = <Value unavailable error>, char ** argv = <Value unavailable error>)+0xa [C:\BW\Windows-64-bit-Release-Build\build\Source\WebKit\WebProcess\EntryPoint\win\WebProcessMain.cpp @ 35] 10 (Inline Function) --------`-------- WebKitWebProcess!invoke_main+0x22 [D:\a\_work\1\s\src\vctools\crt\vcstartup\src\startup\exe_common.inl @ 78] 11 000000e5`fc7ff8d0 00007ffe`22d74cb0 WebKitWebProcess!__scrt_common_main_seh(void)+0x10c [D:\a\_work\1\s\src\vctools\crt\vcstartup\src\startup\exe_common.inl @ 288] 12 000000e5`fc7ff910 00007ffe`363bec4b KERNEL32!BaseThreadInitThunk+0x10 13 000000e5`fc7ff940 00000000`00000000 ntdll!RtlUserThreadStart+0x2b
Attachments
Chris Dumez
Comment 1 2024-11-04 14:44:57 PST
Chris Dumez
Comment 2 2024-11-04 16:42:21 PST
EWS
Comment 3 2024-11-04 22:00:31 PST
Committed 286138@main (4485bf63af0c): <https://commits.webkit.org/286138@main> Reviewed commits have been landed. Closing PR #36163 and removing active labels.
Radar WebKit Bug Importer
Comment 4 2024-11-04 22:01:17 PST
Note You need to log in before you can comment on or make changes to this bug.