RELEASE_ASSERT(checkedPtrCountWithoutThreadCheck()) is failing for Windows Release builds https://bugs.webkit.org/show_bug.cgi?id=282559

Reviewed by NOBODY (OOPS!).

Make ScriptRunner ref-counted to address the crashes.
On Windows, it appears the ScriptRunner could get destroyed
when its m_timer fires.

* Source/WebCore/dom/Document.cpp:
(WebCore::Document::ensureScriptRunner):
(WebCore::Document::protectedScriptRunner):
(WebCore::Document::checkedScriptRunner): Deleted.
* Source/WebCore/dom/Document.h:
* Source/WebCore/dom/ScriptElement.cpp:
(WebCore::ScriptElement::prepareScript):
* Source/WebCore/dom/ScriptRunner.cpp:
(WebCore::ScriptRunner::create):
(WebCore::ScriptRunner::~ScriptRunner):
(WebCore::ScriptRunner::queueScriptForExecution):
(WebCore::ScriptRunner::resume):
(WebCore::ScriptRunner::notifyFinished):
(WebCore::ScriptRunner::timerFired):
* Source/WebCore/dom/ScriptRunner.h: